--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,8 +2,11 @@
 <resources>
 
     <string name="app_name">AndroidFinalProjectVillamil</string>
-    <string name="action_settings">Settings</string>
+    <string name="distances">Your Distances</string>
+    <string name="enter_score">Start Entering your Score!</string>
     <string name="start">Start Measuring</string>
     <string name="stop">Stop Measuring</string>
+    <string name="submit">Submit Distance</string>
+    <string name="zero">0 meters</string>
 
 </resources>
