different way of displaying the distances

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,15 +4,15 @@
     <string name="delete">Delete Distance</string>
     <string name="app_name">AndroidFinalProjectVillamil</string>
     <string name="distances">Your Distances</string>
-    <string name="drivers">Drivers</string>
-    <string name="threeW">3 Woods</string>
-    <string name="fifeW">5 Woods</string>
-    <string name="hibrids">Hibrids</string>
-    <string name="fifeI">5 Irons</string>
-    <string name="sixI">6 Irons</string>
-    <string name="sevenI">7 Irons</string>
-    <string name="eightI">8 Irons</string>
-    <string name="nineI">9 Irons</string>
+    <string name="drivers">Driver Distances</string>
+    <string name="threeW">3 Wood Distances</string>
+    <string name="fifeW">5 Wood Distanes</string>
+    <string name="hibrids">Hibrid Distances</string>
+    <string name="fifeI">5 Iron Distances</string>
+    <string name="sixI">6 Iron Distances</string>
+    <string name="sevenI">7 Iron Distances</string>
+    <string name="eightI">8 Iron Distances</string>
+    <string name="nineI">9 Iron Distances</string>
 	<string name="enter_score">Start Entering your Score!</string>
     <string name="start">Start Measuring</string>
     <string name="stop">Stop Measuring</string>
